2008-12-24  Sebastien Maret  <bmaret@users.sourceforge.net>

	* Engine.pm, PkgVersion.pm: Set proxy env vars before calling
	apt-get. Fixes bug #2040507

2008-12-19  Daniel Macks  <dmacks@netspace.org>

	* Validation.pm: Warn for older (not MD5-protected) patch syntaxes

2008-12-18  Daniel Macks  <dmacks@netspace.org>

	* PkgVersion.pm: Also store patchfile in .deb

2008-12-12  Alexander Hansen  <akh@finkproject.org>

	* Bootstrap.pm:  Recognize 10.5.6

2008-11-30  Daniel Macks  <dmacks@netspace.org>

	* PkgVersion.pm: Remove weird whitespace in diagnostic msg.

2008-11-17  Daniel Macks  <dmacks@netspace.org>

	* Validation.pm: Fix "hardcoded /sw in .patch" check: %exp map
	isn't a .info field

2008-11-13  Daniel Macks  <dmacks@netspace.org>

	* Engine.pm: Include list of modern dependencies in 'fink info'
	for obsolete packages

2008-10-28  Dave Morrison  <drm@finkproject.org>

	* Bootstrap.pm: add function get_selfupdatetrees()

2008-10-27  Dave Morrison  <drm@finkproject.org>

	* Bootstrap.pm, Services.pm: modernize bootstrap

2008-10-21  Dave Morrison  <drm@finkproject.org>

	* VirtPackage.pm: correct an error in what system perl 5.8.8 "provides"

2008-10-05  Daniel Macks  <dmacks@netspace.org>

	* Validation.pm: _filename_versioning_cmp() API change: always
	returns a defined number

2008-10-05  Daniel Macks  <dmacks@netspace.org>

	* Validation.pm: factor out _filename_versioning_cmp() function

2008-10-04  Daniel Macks  <dmacks@netspace.org>

	* Services.pm: Check for definedness before doing string-compare

2008-10-02  Daniel Macks  <dmacks@netspace.org>

	* PkgVersion.pm: Prohibit relative paths for --logfile

2008-10-02  Daniel Macks  <dmacks@netspace.org>

	* Engine.pm: dumpinfo: remember that DocFiles has conditionals

2008-09-21  Daniel Macks  <dmacks@netspace.org>

	* Engine.pm: Treat "." and "+" as literals in cleanup --debs

2008-09-16  Daniel Macks  <dmacks@netspace.org>

	* Engine.pm: Ignore epoch in cleanup --debs (%e not in .deb filename)
