@@ -1,3 +1,9 @@
+2009-02-19  Benjamin Reed  <rangerrick@users.sourceforge.net>
+
+	* VirtPackage.pm: Fix some bogus perl provides, also change xcode
+	to not be BuildDependsOnly, since some packages legitimately depend
+	upon it at runtime.
+
 2008-12-24  Sebastien Maret  <bmaret@users.sourceforge.net>
 
 	* Engine.pm, PkgVersion.pm: Set proxy env vars before calling
